# Generated by Django 4.1.6 on 2023-06-20 18:22

from django.conf import settings
from django.db import migrations, models
import django.db.models.deletion


class Migration(migrations.Migration):

    initial = True

    dependencies = [
        ('transportation', '0001_initial'),
        migrations.swappable_dependency(settings.AUTH_USER_MODEL),
        ('real_estate', '0001_initial'),
    ]

    operations = [
        migrations.CreateModel(
            name='File',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('name', models.CharField(blank=True, max_length=100, null=True)),
                ('content', models.FileField(upload_to='static/files')),
            ],
            options={
                'verbose_name_plural': 'Files',
            },
        ),
        migrations.CreateModel(
            name='TaxManagementCompany',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('name', models.CharField(max_length=50, null=True)),
                ('personal_email_used', models.EmailField(blank=True, max_length=254, null=True)),
                ('site_app_company', models.CharField(blank=True, help_text='ex: myfoncia.com', max_length=70, null=True)),
                ('comments', models.CharField(blank=True, max_length=500, null=True)),
            ],
            options={
                'verbose_name_plural': 'Tax Management Companies',
                'ordering': ['name', 'site_app_company', 'personal_email_used'],
            },
        ),
        migrations.CreateModel(
            name='TaxManagementContract',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('contract_number', models.CharField(blank=True, max_length=50, null=True)),
                ('starting_date', models.DateField(blank=True, null=True)),
                ('ending_date', models.DateField(blank=True, null=True)),
                ('is_contract_active', models.BooleanField(blank=True, null=True)),
                ('annual_price', models.JSONField(blank=True, help_text="ex: {'2020': 400, '2021': 400, ...}", null=True)),
                ('company', models.ForeignKey(blank=True, null=True, on_delete=django.db.models.deletion.CASCADE, related_name='company', to='tax.taxmanagementcompany')),
            ],
            options={
                'verbose_name_plural': 'Tax Management Contracts',
                'ordering': ['is_contract_active', 'company'],
            },
        ),
        migrations.CreateModel(
            name='Tax',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('name', models.CharField(max_length=100, null=True)),
                ('tax_type', models.CharField(blank=True, choices=[('Real Estate tax', 'Real Estate tax'), ('Transportation tax', 'Transportation tax'), ('Person tax', 'Person tax'), ('Other tax', 'Other tax')], max_length=50, null=True)),
                ('is_tax_management_company_used', models.BooleanField(blank=True, default=False, null=True)),
                ('personal_email_used', models.EmailField(blank=True, max_length=254, null=True)),
                ('site_app', models.CharField(blank=True, help_text='ex: impots.gouv.fr', max_length=70, null=True)),
                ('annual_price', models.JSONField(blank=True, help_text="ex: {'2020': 400, '2021': 400, ...}", null=True)),
                ('payment_proof', models.JSONField(blank=True, help_text="ex: {'2020': 'receipt_number0987y76t', '2021': 'receipt_number1237g76t'}", null=True)),
                ('person', models.ForeignKey(blank=True, help_text='Fill only if type = Person tax', null=True, on_delete=django.db.models.deletion.CASCADE, related_name='tax', to=settings.AUTH_USER_MODEL)),
                ('real_estate_asset', models.ForeignKey(blank=True, help_text='Fill only if type = Real Estate tax', null=True, on_delete=django.db.models.deletion.CASCADE, related_name='tax', to='real_estate.asset')),
                ('tax_management_company', models.ForeignKey(blank=True, help_text='Fill only if is_tax_management_company_used is True', null=True, on_delete=django.db.models.deletion.CASCADE, related_name='tax', to='tax.taxmanagementcompany')),
                ('transportation_asset', models.ForeignKey(blank=True, help_text='Fill only if type = Transportation tax', null=True, on_delete=django.db.models.deletion.CASCADE, related_name='tax', to='transportation.asset')),
            ],
            options={
                'verbose_name_plural': 'Taxes',
                'ordering': ['name', 'tax_type'],
            },
        ),
        migrations.CreateModel(
            name='FileTaxManagement',
            fields=[
                ('file_ptr', models.OneToOneField(auto_created=True, on_delete=django.db.models.deletion.CASCADE, parent_link=True, primary_key=True, serialize=False, to='tax.file')),
                ('access_to_model', models.ForeignKey(blank=True, null=True, on_delete=django.db.models.deletion.CASCADE, related_name='tax_management_file', to='tax.taxmanagementcontract')),
            ],
            bases=('tax.file',),
        ),
        migrations.CreateModel(
            name='FileTax',
            fields=[
                ('file_ptr', models.OneToOneField(auto_created=True, on_delete=django.db.models.deletion.CASCADE, parent_link=True, primary_key=True, serialize=False, to='tax.file')),
                ('access_to_model', models.ForeignKey(blank=True, null=True, on_delete=django.db.models.deletion.CASCADE, related_name='tax_file', to='tax.tax')),
            ],
            bases=('tax.file',),
        ),
    ]
