erDiagram
    %% Core User entity
    User ||--o{ Asset : owns
    User ||--o{ BankAccount : has
    User ||--o{ Document : has
    User ||--o{ InsuranceContract : insures
    User ||--o{ Bill : billed_to
    User ||--o{ UtilityContract : subscribes_to
    User ||--o{ Tax : pays

    %% Administrative models
    Document ||--o{ FileDocument : has
    Document {
        int id PK
        int user_id FK
        string name
        string type
        json comment
    }
    
    InsuranceCompany ||--o{ InsuranceContract : provides
    InsuranceCompany {
        int id PK
        string name
        int phone_number
        string site_app_company
    }
    
    InsuranceContract ||--o{ FileInsuranceContract : has
    InsuranceContract {
        int id PK
        int company_id FK
        string type
        int real_estate_asset_id FK
        int transportation_asset_id FK
        int person_id FK
        string contract_number
        date starting_date
        date ending_date
        boolean is_insurance_active
        string personal_email_used
        json annual_price
        json coverage
    }
    
    %% Financial models
    Bank ||--o{ BankAccount : operates
    Bank {
        int id PK
        string name
        string address
        int postal_code
        string country
    }
    
    BankAccount ||--o{ BankCard : issues
    BankAccount ||--o{ BankAccountReport : has
    BankAccount ||--o{ FileAccount : has
    BankAccount ||--o{ Mortgage : finances
    BankAccount ||--o{ Asset : linked_to
    BankAccount {
        int id PK
        int bank_id FK
        int titular_id FK
        string name
        string IBAN
        string BIC
        date starting_date
        date ending_date
        date closing_account_date
        boolean is_account_open
        json value_on_31_12
    }
    
    BankCard ||--o{ FileCard : has
    BankCard {
        int id PK
        int bank_account_id FK
        string name
        boolean is_active
        string card_number
        date ending_date
        date CCV
    }
    
    BankAccountReport ||--o{ FileAccountReport : has
    BankAccountReport {
        int id PK
        int bank_account_id FK
        date date
    }

    %% Health models
    HealthBill ||--o{ FileBill : has
    HealthBill {
        int id PK
        string company_name
        int client_name_id FK
        string bill_name
        date date
        float total_price
        boolean is_paid
        boolean is_asked_by_us
    }
    
    Product ||--o{ FileProduct : has
    Product {
        int id PK
        string name
        boolean natural
        boolean child_use
        boolean adult_use
        string min_age
        string source_info
        date date_info
        string composition
        string interests
        json comments
    }
    
    Symptom ||--o{ FileSymptom : has
    Symptom }o--o{ Product : treats
    Symptom {
        int id PK
        string name
        boolean child
        boolean adult
        json comments
    }
    
    %% Real Estate models
    Asset ||--o{ FileAsset : has
    Asset ||--o{ Bill : generates
    Asset ||--o{ UtilityContract : has
    Asset ||--o{ HollydaysReservation : has
    Asset ||--o{ Tax : subject_to
    Asset {
        int id PK
        int owner_id FK
        string nickname
        string address
        int postal_code
        string city
        string country
        date buying_date
        int buying_price
        boolean has_on_going_mortgage
        boolean is_rented
        boolean is_our_living_house
        int tax_management_id FK
        json details
        json results_by_year
    }
    
    Bill ||--o{ FileBill : has
    Bill {
        int id PK
        int asset_id FK
        string company_name
        int client_name_id FK
        string bill_name
        boolean is_tax_deductible
        boolean is_location_commission_bill
        date date
        float total_price
        float tax
        float price_without_tax
    }
    
    CoproManagementCompany ||--o{ CoproManagementContract : provides
    CoproManagementCompany {
        int id PK
        string name
        string personal_email_used
        string site_app_company
        string comments
    }
    
    CoproManagementContract ||--o{ FileCoPro : has
    CoproManagementContract ||--|| Asset : manages
    CoproManagementContract {
        int id PK
        int company_id FK
        string contract_number
        int asset_id FK
        date starting_date
        date ending_date
        boolean is_management_active
        float monthly_price
        int year
        json annual_expenses
    }
    
    HollydaysPlatform ||--o{ HollydaysReservation : handles
    HollydaysPlatform ||--o{ FileHollyDaysPlatform : has
    HollydaysPlatform {
        int id PK
        string name
        string personal_email_used
        string site_app_company
        string comments
    }
    
    HollydaysReservation ||--o{ FileHollyDaysReservation : has
    HollydaysReservation {
        int id PK
        int platform_id FK
        int asset_id FK
        string reservation_number
        date entry_date
        int number_of_nights
        date end_date
        string renting_person_full_name
        string renting_person_dni
        string renting_person_direction
        string renting_person_postcode
        string renting_person_city
        string renting_person_region
        string renting_person_country
        float price
        boolean received_bank
        float cleaning
        float commission_platform
        float commission_other
        text comments
    }
    
    Mortgage ||--o{ FileMortgage : has
    Mortgage ||--|| Asset : finances
    Mortgage {
        int id PK
        int asset_id FK
        string name
        int bank_account_id FK
        date starting_date
        date ending_date
        json rate_renegociations
        json annual_interests
        json annual_capital_refund
        json capital_due_end_of_year
    }
    
    RentingManagementCompany ||--o{ RentingManagementContract : provides
    RentingManagementCompany {
        int id PK
        string name
        string personal_email_used
        string site_app_company
        string comments
    }
    
    RentingManagementContract ||--o{ FileRenting : has
    RentingManagementContract ||--|| Asset : manages
    RentingManagementContract {
        int id PK
        int company_id FK
        string contract_number
        int asset_id FK
        date starting_date
        date ending_date
        boolean is_management_active
        json annual_results
    }
    
    Tenant ||--o{ FileTenant : has
    Tenant ||--|| Asset : rents
    Tenant {
        int id PK
        int asset_id FK
        string first_name
        string last_name
        int phone_number
        string email
        string id_type
        string id_number
        string bank_account_IBAN
        string bank_account_recipient
        date rental_starting_date
        date rental_ending_date
        int deposit_amount
        boolean is_actual_tenant
        boolean has_guarantee
        json comments
    }
    
    UtilitySupplier ||--o{ UtilityContract : provides
    UtilitySupplier {
        int id PK
        string name
        string personal_email_used
        string phone
        text comments
    }
    
    UtilityContract ||--o{ FileUtility : has
    UtilityContract {
        int id PK
        int supplier_id FK
        int user_id FK
        string personal_email_used
        int asset_id FK
        string service
        string contract_number
        date starting_date
        date ending_date
        int year
        float monthly_price
        float payment_1
        float payment_2
        float payment_3
        float payment_4
        float payment_5
        float payment_6
        float payment_7
        float payment_8
        float payment_9
        float payment_10
        float payment_11
        float payment_12
        float installation_price
        date date_installation
        boolean is_active
        text comments
    }
    
    %% Tax models
    TaxManagementCompany ||--o{ TaxManagementContract : provides
    TaxManagementCompany ||--o{ Tax : manages
    TaxManagementCompany {
        int id PK
        string name
        string personal_email_used
        string site_app_company
        string comments
    }
    
    TaxManagementContract ||--o{ FileTaxManagement : has
    TaxManagementContract {
        int id PK
        int company_id FK
        string contract_number
        date starting_date
        date ending_date
        boolean is_contract_active
        json annual_price
    }
    
    Tax ||--o{ FileTax : has
    Tax {
        int id PK
        string name
        string tax_type
        int real_estate_asset_id FK
        string real_estate_tax_type
        int transportation_asset_id FK
        int year
        int person_id FK
        boolean is_tax_management_company_used
        int tax_management_company_id FK
        float yearly_price
        string personal_email_used
        string site_app
    }
    
    %% Transportation models
    TransportationAsset ||--o{ File : has
    TransportationAsset ||--o{ InsuranceContract : has_insurance
    TransportationAsset ||--o{ Tax : subject_to
    TransportationAsset {
        int id PK
        int owner_id FK
        string type
        string brand
        string model
        string registration_number
        date buying_date
        int buying_price
        boolean has_been_bought_new
        boolean has_on_going_credit
        boolean has_on_going_leasing
        date last_itv_date
        date next_itv_date
        json comments
    }
